--- a/desafios/modulo-02/d012/style.css
+++ b/desafios/modulo-02/d012/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
+
+:root{
+    --font1: Verdana,Geneva, Tahoma, sans-serif; 
+    --font2: 'Fredericka the Great', cursive;
+    --font3: 'Sriracha', cursive;
+}
+
 *{
     margin: 0px;
     padding: 0px;
@@ -8,6 +18,7 @@
 html, body {
     min-height: 100vh;
     background-color: #446956;
+    font-family: var(--font1);
 }
 
 header{
@@ -18,10 +29,15 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 8vw;
+    text-align: center;
 }
 
 header > p{
     padding-bottom: 50px;
+    font-size: 0.75em;
+    text-align: center;
 }
 
 header a, footer a{
@@ -37,7 +53,12 @@ section{
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
-    padding-left: 30px  ;
+    padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 3.5vw;
+}
+section > p{
+    padding-bottom: 2em;
 }
 
 section.normal{
@@ -48,13 +69,26 @@ section.normal{
 section.imagem{
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px;
 }
 
 section.imagem > p{
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.253);
+    text-shadow: 1px 1px 0px black;
 }
 
+section#img1{
+    background-image: url('../d012/img/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img2{
+    background-image: url('../d012/img/background002.jpg');
+    background-size: cover;
+}
 footer{
     background-color: black;
     color: white;
